test/darwin/fail/write06.v3
//@execute = true
component write06 {
	def main() -> bool {
		var str = "The quick brown fox jumped over the lazy dog.";
		var buf = Pointer.atContents(str);
		var r = Darwin.write(1, buf, str.length);
		return r == str.length;
	}
}
